Update readme. Fixed didplay of category list on mobiles,

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,48 +27,6 @@ div.faq-info p {
 
 /*
 ================================================================================
-========================== ES6 Scroll to top button ============================
-================================================================================
-*/
-/* Created by Josh Mason https://codepen.io/joshuamasen/pen/OYaYbL */
-/* 
-.top-link {
-  transition: all 0.25s ease-in-out;
-  position: fixed;
-  bottom: 60px;
-  right: 0;
-  display: inline-flex;
-  cursor: pointer;
-  align-items: center;
-  justify-content: center;
-  margin: 0 3em 3em 0;
-  border-radius: 50%;
-  padding: 0.25em;
-  width: 60px;
-  height: 60px;
-  background-color: rgba(213,210,210,0.29);
-}
-.top-link.show {
-  visibility: visible;
-  opacity: 1;
-}
-.top-link.hide {
-  visibility: hidden;
-  opacity: 0;
-}
-.top-link i {
-  color: #9e9e9e;
-  font-size: 24px;
-}
-.top-link:hover {
-  background-color: rgba(232,232,232,.39);
-}
-.top-link:hover i {
-  fill: #000000;
-} */
-
-/*
-================================================================================
 ========================== Materialize Buttons Styling =========================
 ================================================================================
 */
@@ -95,7 +53,6 @@ div.faq-info p {
 
 .btn-small {
   margin: 2px 2px;
-  /* min-width: 50px; */
 }
 
 .btn-edit-profile {
@@ -141,8 +98,6 @@ input#submit.waves-button-input {
 */
 
 .parallax-container {
-  /* min-height: 200px; */
-  /* max-height: auto; */
   line-height: 0;
   height: auto;
   background-color: rgba(0, 0, 0, 0.4);
@@ -222,12 +177,6 @@ nav li a {
   padding: 0 15px;
 }
 
-/* .copyright {
-  font-size: 1.8em;
-  color: #ffab91;
-  margin-right: 10px;
-  text-shadow: 1px 2px 5px rgba(.76, .74, .74, .64);
-} */
 .copyright {
   font-size: .7em;
   /* position: relative;
@@ -236,8 +185,6 @@ nav li a {
   margin-right: 10px;
   text-shadow: 1px 2px 5px rgba(.76, .74, .74, .64);
 }
-
-
 
 .social-icon {
   color: #ffab91;
@@ -282,7 +229,6 @@ footer.page-footer {
   padding-top: 0;
   margin: 0;
   background-color: #ef5350;
-  /* background-color: #ee6e73; */
 }
 
 .page-footer .footer-copyright {
@@ -345,10 +291,6 @@ ul.share-buttons {
   border: 1px solid #c1ad0f;
 }
 
-/* .collapsible li:active .collapsible-header:focus {
-  border-bottom: 2px solid red;
-} */
-
 .collapsible .row {
   margin-bottom: 0;
 }
@@ -369,8 +311,6 @@ li .collapsible-header {
 
 li .collapsible-header .caret {
   color: #fff;
-  /* margin-right: 0; */
-  /* margin: 0 auto; */
   -webkit-transition: -webkit-transform 0.2s ease;
   transition: -webkit-transform 0.2s ease;
   -o-transition: transform 0.2s ease;
